--- a/Views/Css/Style.css
+++ b/Views/Css/Style.css
@@ -1,3 +1,16 @@
+body 
+{
+               background-image: url(https://cdn.pixabay.com/photo/2017/11/24/10/43/admission-2974645_960_720.jpg);
+               background-repeat: no-repeat;
+               background-size: 1920px 1080px;
+               -webkit-background-size: cover;
+               background-size: cover;
+               background-attachment: fixed;
+}
+.height-100 {
+    height: 100%;
+}
+
 * {
     font-family: sans-serif;
     text-align: center;
