--- a/Views/Css/Style.css
+++ b/Views/Css/Style.css
@@ -1,14 +1,11 @@
 body 
 {
-               background-image: url(https://cdn.pixabay.com/photo/2017/11/24/10/43/admission-2974645_960_720.jpg);
-               background-repeat: no-repeat;
-               background-size: 1920px 1080px;
-               -webkit-background-size: cover;
-               background-size: cover;
-               background-attachment: fixed;
-}
-.height-100 {
-    height: 100%;
+     background-image: url(https://cdn.pixabay.com/photo/2017/11/24/10/43/admission-2974645_960_720.jpg);
+     background-repeat: no-repeat;
+     background-size: 1920px 1080px;
+     -webkit-background-size: cover;
+     background-size: cover;
+     background-attachment: fixed;
 }
 
 * {
@@ -18,14 +15,7 @@ body
     padding: 0;
     box-sizing: border-box;
     -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    
-    background-image: url(Img/MoviePass.jpg);
-    background-repeat: no-repeat;
-    background-size: 1920px 1080px;
-    -webkit-background-size: cover;
-    background-size: cover;
-    background-attachment: fixed;
+    -webkit-box-sizing: border-box;   
 }
 
 h1{
@@ -93,4 +83,12 @@ h1 span{
 
 .cont-form .form .btn-submit:hover{
    background: #fa5252; 
+}
+
+/*-------------------- DISEÑO DE NAV-------------------------*/
+
+.nav-link{
+    background-color: #212529;
+    padding: 150px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
