--- a/Views/Css/Style.css
+++ b/Views/Css/Style.css
@@ -8,20 +8,25 @@ body
      background-attachment: fixed;
 }
 
-* {
+/*-------------------- DISEÑO DE LOGIN/REGISTER/ADD CINEMA -------------------------*/
+*{
     font-family: sans-serif;
-    text-align: center;
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;   
+    padding: 0;    
 }
 
 h1{
     font-family: 'Anton', sans-serif;
     margin: 100px 0 0 0;
     color: #e03131;
+    text-align: center;
+}
+
+h2{
+    text-align: center;
+    font-family: 'Roboto Condensed', sans-serif;
+    margin-bottom: 20px;
+    color: #FFF;
 }
 
 h1 span{
@@ -40,12 +45,11 @@ h1 span{
     border-radius: 3px;
     color: #FFF;
     padding: 20px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
 }
 
-.cont-form .form .form-title{
-    font-family: 'Roboto Condensed', sans-serif;
-    margin-bottom: 30px;
-}
 .cont-form .form .form-label{
     display: block;
     font-size: 16px;
@@ -87,21 +91,22 @@ h1 span{
 
 /*-------------------- DISEÑO DE NAV-------------------------*/
 
-.nav-link{
-    background-color: #212529;
-    padding-top: 40px;
+
+#menu{
+    background: rgba(0,0,0,.6);
+    margin: 20px;
+    border-radius: 5px;
+    padding-top: 26px;
     padding-bottom: 40px;
     font-family: 'Roboto Condensed', sans-serif;
 }
 
-#menu{
-    background: rgba(0,0,0,.6);
-}
-
 #menu ul{
     list-style: none;
-    margin: 0;
-    padding: 0;
+    padding: 10px;
+    float: right;
+    position: relative;
+    bottom: 36px;
 }
 
 #menu ul li{
@@ -111,17 +116,123 @@ h1 span{
 #menu ul li a{
     color: #FFF;
     display: block;
-    margin: left;
     padding: 20px;
     text-decoration: none;
     border-bottom: 2px solid#e03131;
+    border-radius: 2px;
 }
 
 #menu ul li a:hover{
     background-color: #212529;
 }
 
-.item-r{
-    float: right;
+/*-------------------- DISEÑO DE CINEMA LIST-------------------------*/
+
+.table-list{
+    width:1500px;
+    margin: 150px auto;
+    border-radius: 5px;
 }
+
+.table-title{
+    text-align: center;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 60px;
+    margin-bottom: 20px;
+    color: #FFF;
+}
+
+table{
+    background: rgba(0,0,0,.6);
+    text-align: left;
+    border-collapse: collapse;
+    width: 100%;
+    border-radius: 5px;
+    color: #FFF;
+}
+
+th,td{
+    padding: 20px;
+}
+
+thead{
+    background-color: #212529;
+    border-bottom:solid 5px #e03131;
+    color: #FFF; 
+}
+
+tr:nth-child(even){
+    background-color: rgba(0,0,0,.8);
+}
+
+tr:hover td{
+    background-color: #491515;
+}
+
+/*-------------------- CINEMA LIST DE PRUEBA-------------------------*/
+
+/*Iconos*/
+
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: url(https://example.com/MaterialIcons-Regular.eot); /* For IE6-8 */
+    src: local('Material Icons'),
+      local('MaterialIcons-Regular'),
+      url(https://example.com/MaterialIcons-Regular.woff2) format('woff2'),
+      url(https://example.com/MaterialIcons-Regular.woff) format('woff'),
+      url(https://example.com/MaterialIcons-Regular.ttf) format('truetype');
+  }
+
+  .material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;  /* Preferred icon size */
+    display: inline-block;
+    line-height: 1;
+    text-transform: none;
+    letter-spacing: normal;
+    word-wrap: normal;
+    white-space: nowrap;
+    direction: ltr;
+  
+    /* Support for all WebKit browsers. */
+    -webkit-font-smoothing: antialiased;
+    /* Support for Safari and Chrome. */
+    text-rendering: optimizeLegibility;
+  
+    /* Support for Firefox. */
+    -moz-osx-font-smoothing: grayscale;
+  
+    /* Support for IE. */
+    font-feature-settings: 'liga';
+  }
+
+  :root{
+      --primary-color: #fff;
+      --secondary-color: rgb(61, 68, 73);
+      --highlight-color: #3282b8;
+
+      --dt-padding: 12px;
+      --dt-padding-s: 6px;
+      --dt-padding-xs: 2px;
+
+      --dt-border-radius: 3px;
+  }
+
+  .material-icons{
+      font-size: 16px;
+  }
+
+  .datatable-container{
+      font-family: 'Roboto', sans-serif;
+      background-color: var(--dt-background-color-container);
+      border-radius: var(--dt-border-radius);
+      color: var(--dt-text-color);
+      width: 600px;
+      margin: 0 auto;
+      font-size: 12px;
+  }
 
