--- a/Views/Css/Style.css
+++ b/Views/Css/Style.css
@@ -6,13 +6,14 @@ body
      -webkit-background-size: cover;
      background-size: cover;
      background-attachment: fixed;
+     overflow-x: auto;
 }
 
 /*-------------------- DISEÑO DE LOGIN/REGISTER/ADD CINEMA -------------------------*/
 *{
     font-family: sans-serif;
     margin: 0;
-    padding: 0;    
+    padding: 0;   
 }
 
 h1{
@@ -24,7 +25,7 @@ h1{
 
 h2{
     text-align: center;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Staatliches', cursive;
     margin-bottom: 20px;
     color: #FFF;
 }
@@ -35,6 +36,7 @@ h1 span{
 }
 
 .cont-form{
+    font-family: 'Staatliches', cursive;
     background: rgba(0,0,0,.6);
     width: 100%;
     max-width: 400px;
@@ -45,12 +47,15 @@ h1 span{
     border-radius: 3px;
     color: #FFF;
     padding: 20px;
+    display: block;
+    
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
 
 .cont-form .form .form-label{
+    font-family: 'Staatliches', cursive;
     display: block;
     font-size: 16px;
     position: relative;
@@ -73,6 +78,7 @@ h1 span{
 }
 
 .cont-form .form .btn-submit{
+    font-family: 'Staatliches', cursive;
     width: 100%;
     outline: none;
     background: #e03131;
@@ -86,27 +92,44 @@ h1 span{
 }
 
 .cont-form .form .btn-submit:hover{
-   background: #fa5252; 
+    background: #fa5252; 
+ }
+
+.cont-form .form .btn-submit-fc{
+    font-family: 'Staatliches', cursive;
+    width: 100%;
+    outline: none;
+    background: #110650;
+    font-size: 16px;
+    border: none;
+    color: #FFF;
+    padding: 15px;
+    margin: 4px;
+    cursor: pointer;
+    border-radius: 5px;
 }
+
+.cont-form .form .btn-submit-fc:hover{
+    background:  #211564;
+ }
 
 /*-------------------- DISEÑO DE NAV-------------------------*/
 
-
 #menu{
+    display: none;
     background: rgba(0,0,0,.6);
-    margin: 20px;
+    margin: 10px;
     border-radius: 5px;
-    padding-top: 26px;
-    padding-bottom: 40px;
-    font-family: 'Roboto Condensed', sans-serif;
+    
+    font-family: 'Staatliches', cursive;
+    display: flex;
+    justify-content: flex-end;
 }
 
 #menu ul{
     list-style: none;
-    padding: 10px;
-    float: right;
+    padding-bottom: -30px;
     position: relative;
-    bottom: 36px;
 }
 
 #menu ul li{
@@ -132,18 +155,19 @@ h1 span{
 /*-------------------- DISEÑO DE CINEMA LIST-------------------------*/
 
 .table-list{
-    width:1300px;
+    width:1200px;
     margin: 150px auto;
     border-radius: 5px;
+    border-collapse: collapse;
+    max-width: 1100px;
 }
 
 .table-title{
     text-align: center;
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 60px;
+    font-family: 'Staatliches', cursive;
+    font-size: 50px;
     margin-bottom: 20px;
     color: #FFF;
-    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .table-list .button-edit{
@@ -153,7 +177,7 @@ h1 span{
     background: green;
     cursor: pointer;
     border: none;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Staatliches', cursive;
     margin-right:  -60px;
     margin-left: -10px;
 }
@@ -169,7 +193,7 @@ h1 span{
     background: red;
     cursor: pointer;
     border: none;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Staatliches', cursive;
     margin-left: 20px;
     margin-right: -80px;
 }
@@ -185,7 +209,7 @@ h1 span{
     background: blue;
     cursor: pointer;
     border: none;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Staatliches', cursive;
     margin-left: -60px;
     margin-right: -60px;
 }
@@ -195,6 +219,7 @@ h1 span{
 }    
 
 table{
+    overflow-x: auto;
     background: rgba(0,0,0,.6);
     text-align: left;
     border-collapse: collapse;
@@ -208,6 +233,7 @@ th,td{
 }
 
 thead{
+    font-family: 'Staatliches', cursive;
     background-color: #212529;
     border-bottom:solid 5px #e03131;
     color: #FFF; 
@@ -221,9 +247,17 @@ tr:hover td{
     background-color: #491515;
 }
 
+@media ( max-width: 30em){ /*30 x 16px = 480px */
+.table-list{
+    display: flex;
+    flex-direction: column;
+    overflow-x: auto;
+}    
+}
 /*--------------------AUDITORIUM LIST-------------------------*/
 
 .button-add{
+    font-family: 'Staatliches', cursive;
     border-radius: 5px;
     padding: 10px;
     margin: 20px;
