--- a/Views/Css/Style.css
+++ b/Views/Css/Style.css
@@ -6,14 +6,13 @@ body
      -webkit-background-size: cover;
      background-size: cover;
      background-attachment: fixed;
-     overflow-x: auto;
 }
 
 /*-------------------- DISEÑO DE LOGIN/REGISTER/ADD CINEMA -------------------------*/
 *{
     font-family: sans-serif;
     margin: 0;
-    padding: 0;   
+    padding: 0;    
 }
 
 h1{
@@ -25,7 +24,7 @@ h1{
 
 h2{
     text-align: center;
-    font-family: 'Staatliches', cursive;
+    font-family: 'Roboto Condensed', sans-serif;
     margin-bottom: 20px;
     color: #FFF;
 }
@@ -36,7 +35,6 @@ h1 span{
 }
 
 .cont-form{
-    font-family: 'Staatliches', cursive;
     background: rgba(0,0,0,.6);
     width: 100%;
     max-width: 400px;
@@ -47,17 +45,15 @@ h1 span{
     border-radius: 3px;
     color: #FFF;
     padding: 20px;
-    display: block;
-    
     box-sizing: border-box;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
 }
 
 .cont-form .form .form-label{
-    font-family: 'Staatliches', cursive;
     display: block;
     font-size: 16px;
+    position: relative;
     margin-top: 10px;
     margin-bottom: 5px;
 }
@@ -77,7 +73,6 @@ h1 span{
 }
 
 .cont-form .form .btn-submit{
-    font-family: 'Staatliches', cursive;
     width: 100%;
     outline: none;
     background: #e03131;
@@ -91,108 +86,64 @@ h1 span{
 }
 
 .cont-form .form .btn-submit:hover{
-    background: #fa5252; 
- }
-
-.cont-form .form .btn-submit-fc{
-    font-family: 'Staatliches', cursive;
-    width: 100%;
-    outline: none;
-    background: #110650;
-    font-size: 16px;
-    border: none;
-    color: #FFF;
-    padding: 15px;
-    margin: 4px;
-    cursor: pointer;
-    border-radius: 5px;
+   background: #fa5252; 
 }
-
-.cont-form .form .btn-submit-fc:hover{
-    background:  #211564;
- }
 
 /*-------------------- DISEÑO DE NAV-------------------------*/
 
-#menu header{
-    width: 100%;
-    background-color: #212529;
+
+#menu{
+    background: rgba(0,0,0,.6);
+    margin: 20px;
+    border-radius: 5px;
+    padding-top: 26px;
+    padding-bottom: 40px;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
-#btn-menu{
-    display: none;
-}
-
-#menu header label{
-    display: none;
-    width: 50px;
-    height: 46px;
-    padding: 10px;
-    border-right: solid 3px #e03131;
-}
-
-#menu header label:hover{
-    cursor: pointer;
-    background-color: #212529;
-}
-
-#menu .menu ul{
-    margin: 0;
+#menu ul{
     list-style: none;
-    padding: 0;
-    display: flex;
-    justify-content: flex-end;
+    padding: 10px;
+    float: right;
+    position: relative;
+    bottom: 36px;
 }
 
-#menu .menu li:hover{
-    background-color: #464747;
+#menu ul li{
+    display: inline-block;
 }
 
-#menu .menu li a{
-    display: block;
-    padding: 10px 20px;
+#menu ul li a{
     color: #FFF;
+    display: block;
+    padding: 20px;
     text-decoration: none;
-    border-bottom: solid 3px #e03131;
+    border-bottom: 2px solid#e03131;
+    border-radius: 2px;
 }
 
-@media (max-width:768px){
-    #menu header label{
-        display: block;
-    }
+#menu ul li a:hover{
+    background-color: #212529;
+}
 
-    #menu .menu{
-        position: absolute;
-        background-color: #212529;
-        width: 70%;
-        margin-left: -70%;
-        transition: all 0.5s;
-    }
-
-    #menu .menu ul{
-        flex-direction: column;
-    }
-
-    #btn-menu:checked ~ .menu{
-        margin: 0;
-    }
+.item-l{
+    margin-right: 1100px;
 }
 /*-------------------- DISEÑO DE CINEMA LIST-------------------------*/
 
 .table-list{
-    width:1200px;
+    width:1300px;
     margin: 150px auto;
     border-radius: 5px;
-    border-collapse: collapse;
-    max-width: 1100px;
 }
 
 .table-title{
     text-align: center;
-    font-family: 'Staatliches', cursive;
-    font-size: 50px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 60px;
     margin-bottom: 20px;
     color: #FFF;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 .table-list .button-edit{
@@ -202,7 +153,7 @@ h1 span{
     background: green;
     cursor: pointer;
     border: none;
-    font-family: 'Staatliches', cursive;
+    font-family: 'Roboto Condensed', sans-serif;
     margin-right:  -60px;
     margin-left: -10px;
 }
@@ -218,7 +169,7 @@ h1 span{
     background: red;
     cursor: pointer;
     border: none;
-    font-family: 'Staatliches', cursive;
+    font-family: 'Roboto Condensed', sans-serif;
     margin-left: 20px;
     margin-right: -80px;
 }
@@ -231,10 +182,10 @@ h1 span{
     border-radius: 5px;
     padding: 5px 20px;
     color: #FFF;
-    background: rgb(70, 68, 68);
+    background: blue;
     cursor: pointer;
     border: none;
-    font-family: 'Staatliches', cursive;
+    font-family: 'Roboto Condensed', sans-serif;
     margin-left: -60px;
     margin-right: -60px;
 }
@@ -244,7 +195,6 @@ h1 span{
 }    
 
 table{
-    overflow-x: auto;
     background: rgba(0,0,0,.6);
     text-align: left;
     border-collapse: collapse;
@@ -258,7 +208,6 @@ th,td{
 }
 
 thead{
-    font-family: 'Staatliches', cursive;
     background-color: #212529;
     border-bottom:solid 5px #e03131;
     color: #FFF; 
@@ -275,7 +224,6 @@ tr:hover td{
 /*--------------------AUDITORIUM LIST-------------------------*/
 
 .button-add{
-    font-family: 'Staatliches', cursive;
     border-radius: 5px;
     padding: 10px;
     margin: 20px;
