lots of changes gg todavia faltan

--- a/Views/Css/Style.css
+++ b/Views/Css/Style.css
@@ -1,6 +1,6 @@
 body 
 {
-     background-image: url(https://cdn.pixabay.com/photo/2017/11/24/10/43/admission-2974645_960_720.jpg);
+     background-image: url(https://i.imgur.com/CHnwHiP.jpg);
      background-repeat: no-repeat;
      background-size: 1920px 1080px;
      -webkit-background-size: cover;
