--- a/Views/Css/Style.css
+++ b/Views/Css/Style.css
@@ -289,3 +289,14 @@ tr:hover td{
 .button-add:hover{
     background: #fa5252;
 }
+
+.posterImg {
+    border-radius: 6px; 
+    margin : 0 0 20px 8px;
+    border: solid 2px red;
+    cursor: pointer;
+}
+
+.posterImg :hover{
+    background-color: rgba(0,0,0,.8);
+}
