--- a/Views/Css/billboard.css
+++ b/Views/Css/billboard.css
@@ -14,13 +14,20 @@
 /* Declare heights because of positioning of img element */
 .carousel-item {
   height: 32rem;
+  background: #000000;
+  color: white;
+  position: relative;
 }
 .carousel-item > img {
   position: absolute;
   top: 0;
   left: 0;
+  bottom: 0;
+  right: 0;
   min-width: 100%;
   height: 32rem;
+  background-position: center;
+  opacity: 0.8;
 }
 
 
