--- a/Views/Css/billboardAdmin.css
+++ b/Views/Css/billboardAdmin.css
@@ -49,44 +49,33 @@
 }
 
 /* BOTON DE FILTRAR POR GENERO */
-.dropbtn {
-  background-color: #212529;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  display: inline-flex;
+.custom-select{
+  background-color: #eaeaea;
+  color: #202020;
+  border-radius: 0px;
+  border-color: #202020;
 }
 
-.dropdown {
-  position: relative;
-  display: inline-block;
+
+.btnFilter{
+  background-color: #eaeaea;
+  color: #202020;
+  border-style: solid;
+  border-color: #202020;
+  padding: 5px 20px;
+  margin-left: 20px;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  right: 0;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+.btnClear{
+  display: flex;
+  background-color: #eaeaea;
+  color: #202020;
+  border-style: solid;
+  border-color: #202020;
+  padding: 5px 20px;
+  margin-left: 20px;
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-.dropdown-content a:hover {background-color: #f1f1f1;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown:hover .dropbtn {
-  background-color: #000000;
+.filters{
+  display: flex;
 }
