--- a/Views/Css/otherStyle.css
+++ b/Views/Css/otherStyle.css
@@ -13,13 +13,13 @@
     margin: 0;
     justify-content: center;
     align-items: center;
-    height: 40vh;
+    height: 60vh;
 }
 
 .contenedor figure{
     position: relative;
-    height: 250px;
-    width: 350px;
+    height: auto;
+    width: auto;
     overflow: hidden;
     border-radius: 6px;
     box-shadow: 0px 15px 25px rgba(0,0,0,.50);
