--- a/Views/Css/otherStyle.css
+++ b/Views/Css/otherStyle.css
@@ -130,3 +130,12 @@
 .button-add:hover{
     background: #166932;
 }
+
+.labelProjections{
+    color: white;
+    font-size: 20px;
+    padding: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: inherit;
+    background-color: #212529;
+}
